ontopia-engine/src/test/resources/net/ontopia/testdata/ltm/error/mergewrong.ltm

#MERGEMAP "test.astma=" "astma"

[topic = "Never heard of AsTMa="]